--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
           <li><a href="blank.html">Контакты</a></li>
         </ul>
         <div class="cart-navigation">
-          <a class="main-cart" href="blank.html">Корзина</a>
+          <a class="main-cart" href="blank.html">
+          <svg class="cart-pic" width="15" height="15" viewBox="0 0 15 15">
+          <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z"/>
+          <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z"/>
+          <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z"/>
+          </svg>Корзина</a>
         </div>
       </nav>
     </header>
@@ -36,24 +41,24 @@
           <h2>Главный слайдер</h2>
           <ul class="main-slider-list">
             <li class="main-slider-item slider-item-1">
-              <div style="background-image: url(img/nerds-index-slide1.png);">
+              <div class="slider-pic-1">
                 <p class="slider-big-text">Долго, дорого, скрупулезно.</p>
                 <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
-                <a class="button main-slider-button" href="blank.html">Узнать больше</a>
+                <a class="button main-slider-button" href="blank.html"><span class="button-text">Узнать больше</span></a>
               </div>
             </li>
             <li class="main-slider-item slider-item-2">
-              <div style="background-image: url(nerds-index-slide2.png);">
+              <div class="slider-pic-2">
                 <p class="slider-big-text">Любим математику как никто другой</p>
                 <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций</p>
-                <a class="button main-slider-button" href="blank.html">Узнать больше</a>
+                <a class="button main-slider-button" href="blank.html"><span class="button-text">Узнать больше</span></a>
               </div>
             </li>
             <li class="main-slider-item slider-item-3">
-              <div style="background-image: url(img/nerds-index-slide3.png);">
+              <div class="slider-pic-3">
                 <p class="slider-big-text">Только ночь, только хардкор</p>
                 <p>Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
-                <a class="button main-slider-button" href="blank.html">Узнать больше</a>
+                <a class="button main-slider-button" href="blank.html"><span class="button-text">Узнать больше</span></a>
               </div>
             </li>
           </ul>
@@ -65,22 +70,22 @@
           <h2>Направления работы</h2>
           <ul class="directions-list">
             <li class="directions-item">
-              <img src="img/illustration-1.png" width="300" height="146" alt="Иллюстрация Веб-сайты">
+              <img src="img/illustration-1.jpg" width="300" height="146" alt="Иллюстрация Веб-сайты">
               <h3>Веб-сайты</h3>
               <p>Мир никогда не будет прежним после того, как увидит ваш сайт!</p>
-              <button class="button directions-button-red" type="button">Заказать</button>
+              <button class="button directions-button-red" type="button"><span class="button-text">Заказать</span></button>
             </li>
             <li class="directions-item">
               <img src="img/illustration-2.png" width="300" height="146" alt="Иллюстрация Приложения">
               <h3>Приложения</h3>
               <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-              <button class="button directions-button-green" type="button">Заказать</button>
+              <button class="button directions-button-green" type="button"><span class="button-text">Заказать</span></button>
             </li>
             <li class="directions-item">
               <img src="img/illustration-3.png" width="300" height="146" alt="Иллюстрация Презентации">
               <h3>Презентации</h3>
               <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-              <button class="button directions-button-yellow" type="button">Заказать</button>
+              <button class="button directions-button-yellow" type="button"><span class="button-text">Заказать</span></button>
             </li>
           </ul>
         </div>
@@ -106,22 +111,22 @@
             <ul class="advantages-list">
               <li class="advantages-item">
                 <p class="advantages-number">146<span class="advantages-percent">%</span></p>
-                <p>Уровень самоотдачи</p>
+                <p class="advantages-small-text">Уровень самоотдачи</p>
               </li>
               <li class="advantages-item">
                 <p class="advantages-number">100<span class="advantages-percent">%</span></p>
-                <p>Соблюдение сроков</p>
+                <p class="advantages-small-text">Соблюдение сроков</p>
               </li>
               <li class="advantages-item">
                 <p class="advantages-number">50<span class="advantages-percent">%</span></p>
-                <p>Минимальная предоплата</p>
+                <p class="advantages-small-text">Минимальная предоплата</p>
               </li>
             </ul>
           </div>
 
           <ul class="logotypes-list">
             <li class="logotypes-item">
-              <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo.svg" width="199" height="68" alt="Логотип HTML Academy"></a>
+              <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo.png" width="199" height="68" alt="Логотип HTML Academy"></a>
             </li>
             <li class="logotypes-item">
               <a href="#"><img src="img/logo-2.png" width="209" height="90" alt="Логотип Barbershop Brodski"></a>
@@ -145,7 +150,7 @@
           <h3>NЁRDS DESIGN STUDIO</h3>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           <a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-          <a class="button map-button" href="blank.html">Напишите нам</a>
+          <a class="button map-button" href="blank.html"><span class="button-text">Напишите нам</span></a>
           <img src="img/map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
         </div>
       </section>
@@ -155,21 +160,21 @@
           <li>
             <a href="#" alt="Вконтакте">
               <svg width="27" height="15" viewBox="0 0 27 15">
-                <path d="M16.138 11.51C17.094 11.201 18.318 13.55 19.621 14.449C20.599 15.13 21.348 14.983 21.348 14.983L24.821 14.933C24.821 14.933 26.636 14.821 25.778 13.379C25.707 13.259 25.275 12.31 23.193 10.357C21.016 8.31404 21.311 8.64504 23.932 5.11304C25.529 2.96004 26.168 1.64504 25.968 1.08504C25.776 0.546037 24.603 0.686037 24.603 0.686037L20.69 0.713037C20.309 0.714037 19.986 0.832037 19.839 1.22804C19.836 1.23204 19.218 2.89404 18.394 4.30704C16.653 7.29604 15.958 7.45504 15.67 7.26804C15.009 6.83504 15.176 5.53104 15.176 4.60404C15.176 1.70704 15.608 0.499037 14.33 0.187037C13.903 0.0830374 13.591 0.0150374 12.502 0.00503741C11.11 -0.0159626 9.92797 0.00503743 9.25797 0.334037C8.81297 0.557037 8.47197 1.04604 8.67897 1.07404C8.93897 1.10904 9.52197 1.23404 9.83397 1.66004C10.235 2.21204 10.223 3.44904 10.223 3.44904C10.223 3.44904 10.452 6.86004 9.68297 7.28304C9.15497 7.57304 8.43297 6.98104 6.87997 4.26704C6.08697 2.87904 5.48797 1.34504 5.48797 1.34504C5.48797 1.34504 5.37197 1.06004 5.16197 0.904037C4.91197 0.719037 4.56197 0.660037 4.56197 0.660037L0.84797 0.684037C0.84797 0.684037 0.28997 0.700037 0.0849697 0.946037C-0.0970303 1.16404 0.0699697 1.61404 0.0699697 1.61404C0.0699697 1.61404 2.97897 8.49504 6.27297 11.961C9.29297 15.143 12.725 14.932 12.725 14.932H14.28C14.28 14.932 14.749 14.878 14.989 14.62C15.213 14.38 15.203 13.929 15.203 13.929C15.203 13.929 15.172 11.82 16.138 11.51Z" fill="white"/>
+                <path d="M16.138 11.51C17.094 11.201 18.318 13.55 19.621 14.449C20.599 15.13 21.348 14.983 21.348 14.983L24.821 14.933C24.821 14.933 26.636 14.821 25.778 13.379C25.707 13.259 25.275 12.31 23.193 10.357C21.016 8.31404 21.311 8.64504 23.932 5.11304C25.529 2.96004 26.168 1.64504 25.968 1.08504C25.776 0.546037 24.603 0.686037 24.603 0.686037L20.69 0.713037C20.309 0.714037 19.986 0.832037 19.839 1.22804C19.836 1.23204 19.218 2.89404 18.394 4.30704C16.653 7.29604 15.958 7.45504 15.67 7.26804C15.009 6.83504 15.176 5.53104 15.176 4.60404C15.176 1.70704 15.608 0.499037 14.33 0.187037C13.903 0.0830374 13.591 0.0150374 12.502 0.00503741C11.11 -0.0159626 9.92797 0.00503743 9.25797 0.334037C8.81297 0.557037 8.47197 1.04604 8.67897 1.07404C8.93897 1.10904 9.52197 1.23404 9.83397 1.66004C10.235 2.21204 10.223 3.44904 10.223 3.44904C10.223 3.44904 10.452 6.86004 9.68297 7.28304C9.15497 7.57304 8.43297 6.98104 6.87997 4.26704C6.08697 2.87904 5.48797 1.34504 5.48797 1.34504C5.48797 1.34504 5.37197 1.06004 5.16197 0.904037C4.91197 0.719037 4.56197 0.660037 4.56197 0.660037L0.84797 0.684037C0.84797 0.684037 0.28997 0.700037 0.0849697 0.946037C-0.0970303 1.16404 0.0699697 1.61404 0.0699697 1.61404C0.0699697 1.61404 2.97897 8.49504 6.27297 11.961C9.29297 15.143 12.725 14.932 12.725 14.932H14.28C14.28 14.932 14.749 14.878 14.989 14.62C15.213 14.38 15.203 13.929 15.203 13.929C15.203 13.929 15.172 11.82 16.138 11.51Z"/>
               </svg>
             </a>
           </li>
           <li>
             <a href="#" alt="Facebook">
               <svg width="12" height="22" viewBox="0 0 12 22">
-                <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white"/>
+                <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z"/>
               </svg>
             </a>
           </li>
           <li>
             <a href="#" alt="Instagram">
               <svg width="21" height="21" viewBox="0 0 21 21">
-                <path d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z" fill="white"/>
+                <path d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z"/>
               </svg>
             </a>
           </li>
@@ -186,18 +191,18 @@
       <h2>Напишите нам</h2>
       <form class="modal-form">
         <p class="modal-item">
-          <label for="modal-name">Ваше имя:</label>
-          <input id="modal-name" type="text" name="name" placeholder="Имя Фамилия">
+          <label for="modal-name" class="modal-item-label">Ваше имя:</label>
+          <input id="modal-name" type="text" name="name" placeholder="Имя Фамилия" class="modal-item-input">
         </p>
         <p class="modal-item">
-          <label for="modal-email">Ваш email:</label>
-          <input id="modal-email" type="email" name="email" placeholder="email@example.com">
+          <label for="modal-email" class="modal-item-label">Ваш email:</label>
+          <input id="modal-email" type="email" name="email" placeholder="email@example.com" class="modal-item-input">
         </p>
         <p class="modal-item">
-          <label for="modal-text">Тест письма:</label>
-          <input id="modal-text" type="text" name="text" placeholder="В свободной форме">
+          <label for="modal-text" class="modal-item-label">Тест письма:</label>
+          <input id="modal-text" type="text" name="text" placeholder="В свободной форме" class="modal-item-input">
         </p>
-        <button class="button" type="submit">Отправить</button>
+        <button class="button" type="submit"><span class="button-text">Отправить</span></button>
       </form>
       <button type="button" class="button-close-cross">Закрыть</button>
     </section>
