--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Дизайн-студия Нёрдс</title>
@@ -8,148 +8,240 @@
     <link href="style.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body class="page-body">
 
-    <header>
-      <nav>
-        <a href="index.html">
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a href="index.html" class="main-header-logo">
           <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип дизайн-студии Нёрдс">
         </a>
-        <ul>
+        <ul class="site-navigation">
           <li><a href="blank.html">Студия</a></li>
           <li><a href="blank.html">Клиенты</a></li>
-          <li><a href="catalog.html" class="current">Магазин</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
           <li><a href="blank.html">Контакты</a></li>
         </ul>
-        <a href="blank.html">Корзина</a>
+        <div class="cart-navigation">
+          <a href="blank.html">
+            <svg class="cart-pic" width="15" height="15" viewBox="0 0 15 15">
+              <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z"/>
+              <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z"/>
+              <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z"/>
+            </svg>
+          <span class="main-cart">Корзина</span></a>
+        </div>
       </nav>
     </header>
 
-    <main>
-      <div>
-        <h1>Магазин готовых шаблонов</h1>
+    <main class="catalog-container">
+
+      <div class="catalog-title-container">
+        <h1 class="catalog-title">Магазин готовых шаблонов</h1>
       </div>
 
-      <div>
-        <form>
-          <h2>Фильтр проектов</h2>
-          <!--Здесь будет форма фильтра-->
+      <div class="filter-container">
+        <h2 class="filter-heading">Фильтр проектов</h2>
+        <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
+          <fieldset>
+            <div>
+              <legend class="filter-legend">Стоимость:</legend>
+              <input type="range" min="0" max="15000">
+            </div>
+            <div>
+              <legend class="filter-legend">Сетка:</legend>
+              <ul>
+                <li>
+                  <input class="filter-option filter-radio" type="radio" name="adaptive" id="adaptive" checked>
+                  <label for="adaptive">Адаптивная</label>
+                </li>
+                <li>
+                  <input class="filter-option filter-radio" type="radio" name="fixed" id="fixed">
+                  <label for="fixed">Фиксированная</label>
+                </li>
+                <li>
+                  <input class="filter-option filter-radio" type="radio" name="rubber" id="rubber" checked>
+                  <label for="rubber">Резиновая</label>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <legend class="filter-legend">Особенности:</legend>
+              <ul>
+                <li>
+                  <input class="filter-option filter-checkbox" type="checkbox" name="slider" id="slider" checked>
+                  <label for="slider">Слайдер</label>
+                </li>
+                <li>
+                  <input class="filter-option filter-checkbox" type="checkbox" name="adv" id="adv">
+                  <label for="adv">Блок преимуществ</label>
+                </li>
+                <li>
+                  <input class="filter-option filter-checkbox" type="checkbox" name="news" id="news" checked>
+                  <label for="news">Новости</label>
+                </li>
+                <li>
+                  <input class="filter-option filter-checkbox" type="checkbox" name="gallery" id="gallery">
+                  <label for="gallery">Галерея</label>
+                </li>
+                <li>
+                  <input class="filter-option filter-checkbox" type="checkbox" name="cart" id="cart">
+                  <label for="cart">Корзина</label>
+                </li>
+              </ul>
+            </div>
+          </fieldset>
+          <button type="submit" class="filter-button button">Показать</button>
         </form>
 
 
-        <section>
+        <section class="sort-container">
           <div>
-            <h2>Сортировка проектов</h2>
-            <p>Сортировать:</p>
-            <ul>
-              <li><a href="blank.html">По цене</a></li>
-              <li><a href="blank.html">По типу</a></li>
-              <li><a href="blank.html">По названию</a></li>
-              <li><a href="blank.html">▼</a></li>
-              <li><a href="blank.html">▲</a></li>
+            <h2 class="sort-title">Сортировка проектов</h2>
+            <p class="sort-legend">Сортировать:</p>
+            <ul class="sort-list">
+              <li><a href="blank.html" class="sort-item">По цене</a></li>
+              <li><a href="blank.html" class="sort-item">По типу</a></li>
+              <li><a href="blank.html" class="sort-item">По названию</a></li>
+              <li><a href="blank.html" class="sort-item"><svg width="11" height="10" viewBox="0 0 11 10" class="icon-down"><path d="M5.5 10L0 0H11"/></svg></a></li>
+              <li><a href="blank.html" class="sort-item"><svg width="11" height="10" viewBox="0 0 11 10" class="icon-up"><path d="M5.5 0L0 10H11L5.5 0Z"/></svg></a></li>
             </ul>
           </div>
 
 
-          <div>
-            <h2>Список проектов</h2>
-            <ul>
-              <li>
-                <div class="grey_block"></div>
+          <div class="projects-container">
+            <h2 class="projects-title">Список проектов</h2>
+            <ul class="projects-list">
+              <li class="projects-item">
+                <div class="projects-grey-block"></div> <!-- ::before с картинкой-->
                 <img src="img/img-sedona.jpg" width="358" height="576" alt="Шаблон туристического сайта">
-                <div>
-                  <h3><a href="blank.html" class="active">SEDONA</a></h3>
-                  <p>Информационный сайт<br>для туристов</p>
-                  <button type="button">9 900₽</button>
+                <div class="project-info">
+                  <h3><a href="blank.html" class="project-heading">SEDONA</a></h3>
+                  <p class="project-text">Информационный сайт<br>для туристов</p>
+                  <button type="button" class="button project-button">9 900₽</button>
                 </div>
               </li>
-              <li>
-                <div class="grey_block"></div>
+              <li class="projects-item">
+                <div class="projects-grey-block"></div>
                 <img src="img/img-pink.png" width="358" height="576" alt="Шаблон лендинга о приложении">
-                <div>
-                  <h3><a href="blank.html">Pink app</a></h3>
-                  <p>Продуктовый лендинг<br> приложения для iOS и Android</p>
-                  <button type="button">9 900₽</button>
+                <div class="project-info">
+                  <h3><a href="blank.html" class="project-heading">Pink app</a></h3>
+                  <p class="project-text">Продуктовый лендинг<br> приложения для iOS и Android</p>
+                  <button type="button" class="button project-button">9 900₽</button>
                 </div>
               </li>
-              <li>
-                <div class="grey_block"></div>
+              <li class="projects-item">
+                <div class="projects-grey-block"></div>
                 <img src="img/img-barbershop.jpg" width="364" height="582" alt="Шаблон для барбершопа">
-                <div>
-                  <h3><a href="blank.html">Barbershop</a></h3>
-                  <p>Сайт салона красоты. <br>Для мужчин, да.</p>
-                  <button type="button">9 900₽</button>
+                <div class="project-info">
+                  <h3><a href="blank.html" class="project-heading">Barbershop</a></h3>
+                  <p class="project-text">Сайт салона красоты. <br>Для мужчин, да.</p>
+                  <button type="button" class="button project-button">9 900₽</button>
                 </div>
               </li>
-              <li>
-                <div class="grey_block"></div>
+              <li class="projects-item">
+                <div class="projects-grey-block"></div>
                 <img src="img/img-mishka.jpg" width="358" height="574" alt="Шаблон интернет-магазина игрушек">
-                <div>
-                  <h3><a href="blank.html">Mishka</a></h3>
-                  <p>Интернет-магазин<br>вязаных игрушек</p>
-                  <button type="button">9 900₽</button>
+                <div class="project-info">
+                  <h3><a href="blank.html" class="project-heading">Mishka</a></h3>
+                  <p class="project-text">Интернет-магазин<br>вязаных игрушек</p>
+                  <button type="button" class="button project-button">9 900₽</button>
                 </div>
               </li>
-              <li>
-                <div class="grey_block"></div>
+              <li class="projects-item">
+                <div class="projects-grey-block"></div>
                 <img src="img/img-aplus.jpg" width="358" height="573" alt="Шаблон лендинга курсов">
-                <div>
-                  <h3><a href="blank.html">A Plus</a></h3>
-                  <p>Лендинг курсов<br>повышения квалификации</p>
-                  <button type="button">9 900₽</button>
+                <div class="project-info">
+                  <h3><a href="blank.html" class="project-heading">A Plus</a></h3>
+                  <p class="project-text">Лендинг курсов<br>повышения квалификации</p>
+                  <button type="button" class="button project-button">9 900₽</button>
                 </div>
               </li>
-              <li>
-                <div class="grey_block"></div>
+              <li class="projects-item">
+                <div class="projects-grey-block"></div>
                 <img src="img/img-kvast.jpg" width="358" height="573" alt="Шаблон промо-сайта о квасе">
-                <div>
-                  <h3><a href="blank.html">Kvas</a></h3>
-                  <p>Промо-сайт производителя <br>крафтового кваса</p>
-                  <button type="button">9 900₽</button>
+                <div class="project-info">
+                  <h3><a href="blank.html" class="project-heading">Kvas</a></h3>
+                  <p class="project-text">Промо-сайт производителя <br>крафтового кваса</p>
+                  <button type="button" class="button project-button">9 900₽</button>
                 </div>
               </li>
             </ul>
           </div>
 
-          <ul>
-            <li><a>1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">Следующая</a></li>
+          <ul class="pagination-list">
+            <li class="pagination-item pagination-item-current"><a>1</a></li>
+            <li class="pagination-item"><a href="#">2</a></li>
+            <li class="pagination-item"><a href="#">3</a></li>
+            <li class="pagination-item pagination-item-next"><a href="#">Следующая</a></li>
           </ul>
         </section>
       </div>
     </main>
 
-    <footer>
-      <section>
+    <footer class="page-footer main-footer">
+      <section class="footer-map">
         <!--Здесь будет карта-->
-        <div>
+        <div class="footer-map-content">
           <h3>NЁRDS DESIGN STUDIO</h3>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-          <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-          <a href="blank.html">Напишите нам</a>
+          <a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+          <a class="button map-button" href="blank.html"><span class="button-text">Напишите нам</span></a>
           <img src="img/map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
         </div>
       </section>
 
-      <section>
-        <ul>
+      <section class="footer-social">
+        <ul class="footer-social-icons">
           <li>
-            <a href="#">Вконтакте</a>
+            <a href="#" alt="Вконтакте">
+              <svg width="27" height="15" viewBox="0 0 27 15">
+                <path d="M16.138 11.51C17.094 11.201 18.318 13.55 19.621 14.449C20.599 15.13 21.348 14.983 21.348 14.983L24.821 14.933C24.821 14.933 26.636 14.821 25.778 13.379C25.707 13.259 25.275 12.31 23.193 10.357C21.016 8.31404 21.311 8.64504 23.932 5.11304C25.529 2.96004 26.168 1.64504 25.968 1.08504C25.776 0.546037 24.603 0.686037 24.603 0.686037L20.69 0.713037C20.309 0.714037 19.986 0.832037 19.839 1.22804C19.836 1.23204 19.218 2.89404 18.394 4.30704C16.653 7.29604 15.958 7.45504 15.67 7.26804C15.009 6.83504 15.176 5.53104 15.176 4.60404C15.176 1.70704 15.608 0.499037 14.33 0.187037C13.903 0.0830374 13.591 0.0150374 12.502 0.00503741C11.11 -0.0159626 9.92797 0.00503743 9.25797 0.334037C8.81297 0.557037 8.47197 1.04604 8.67897 1.07404C8.93897 1.10904 9.52197 1.23404 9.83397 1.66004C10.235 2.21204 10.223 3.44904 10.223 3.44904C10.223 3.44904 10.452 6.86004 9.68297 7.28304C9.15497 7.57304 8.43297 6.98104 6.87997 4.26704C6.08697 2.87904 5.48797 1.34504 5.48797 1.34504C5.48797 1.34504 5.37197 1.06004 5.16197 0.904037C4.91197 0.719037 4.56197 0.660037 4.56197 0.660037L0.84797 0.684037C0.84797 0.684037 0.28997 0.700037 0.0849697 0.946037C-0.0970303 1.16404 0.0699697 1.61404 0.0699697 1.61404C0.0699697 1.61404 2.97897 8.49504 6.27297 11.961C9.29297 15.143 12.725 14.932 12.725 14.932H14.28C14.28 14.932 14.749 14.878 14.989 14.62C15.213 14.38 15.203 13.929 15.203 13.929C15.203 13.929 15.172 11.82 16.138 11.51Z"/>
+              </svg>
+            </a>
           </li>
           <li>
-            <a href="#">Facebook</a>
+            <a href="#" alt="Facebook">
+              <svg width="12" height="22" viewBox="0 0 12 22">
+                <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z"/>
+              </svg>
+            </a>
           </li>
           <li>
-            <a href="#">Instagram</a>
+            <a href="#" alt="Instagram">
+              <svg width="21" height="21" viewBox="0 0 21 21">
+                <path d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z"/>
+              </svg>
+            </a>
           </li>
         </ul>
-        <div>
-          <p>Давайте дружить, это выгодно!</p>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
+        <div class="footer-social-partner">
+          <p class="footer-big-text">Давайте дружить, это выгодно!</p>
+          <p class="footer-light-text">Скидка 10% для друзей из социальных сетей.</p>
         </div>
       </section>
+
     </footer>
+
+    <section class="modal">
+      <h2>Напишите нам</h2>
+      <form class="modal-form">
+        <p class="modal-item">
+          <label for="modal-name" class="modal-item-label">Ваше имя:</label>
+          <input id="modal-name" type="text" name="name" placeholder="Имя Фамилия" class="modal-item-input">
+        </p>
+        <p class="modal-item">
+          <label for="modal-email" class="modal-item-label">Ваш email:</label>
+          <input id="modal-email" type="email" name="email" placeholder="email@example.com" class="modal-item-input">
+        </p>
+        <p class="modal-item">
+          <label for="modal-text" class="modal-item-label">Тест письма:</label>
+          <input id="modal-text" type="text" name="text" placeholder="В свободной форме" class="modal-item-input">
+        </p>
+        <button class="button" type="submit"><span class="button-text">Отправить</span></button>
+      </form>
+      <button type="button" class="button-close-cross">Закрыть</button>
+    </section>
+
   </body>
+
 </html>
